# WhatsThePlan

./: .ebignore  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_workflow.py
.ebextensions/: 01_environment.config  02_port_override.config
backend/app/: graph.py
backend/app/agents/: agentExtractor.py  agentPersistence.py  agentRewriter.py  agentSearch.py  agentValidator.py
backend/app/core/: config.py  dbClient.py  llmClient.py  logger.py  tavilyClient.py
backend/app/models/: schemas.py
eventsFinderBackend/app/: graph.py
eventsFinderBackend/app/agents/: agentExtractor.py  agentPersistence.py  agentRewriter.py  agentSearch.py  agentValidator.py
eventsFinderBackend/app/core/: dbClient.py  llmClient.py  tavilyClient.py
eventsFinderBackend/app/models/: schemas.py
frontend/: index.html  script.js  style.css
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_config.py  test_db_client.py  test_graph.py  test_logger.py
